--- a/scss/edit-additional.scss
+++ b/scss/edit-additional.scss
@@ -180,6 +180,7 @@ body.et-pb-preview #main-content .container {
 
 /* CARD */
 .card-riehm {
+	background:#fff;
 	box-shadow:0px 1px 2px 0px rgba(0, 0, 0, 0.15);
 	padding-bottom:60px;
 	
