--- a/scss/riehm.css
+++ b/scss/riehm.css
@@ -12315,6 +12315,21 @@ body.et-pb-preview #main-content .container .responsive tr td {
   padding: 6px 0;
   vertical-align: top; }
 
+/* TOGGLE - ACCORDION */
+.et_pb_toggle {
+  border-top: none;
+  border-right: none;
+  border-left: none; }
+
+.et_pb_toggle_close {
+  background-color: transparent !important; }
+
+.et_pb_toggle_title:before {
+  color: #666; }
+
+.et_pb_toggle_open {
+  background: transparent !important; }
+
 /*
 .background-color {position:relative;
 	&.red {
@@ -12398,6 +12413,36 @@ body.et-pb-preview #main-content .container ol {
     margin-left: -23px; }
 
 /* BUTTON */
+.button a {
+  color: #DB1928 !important;
+  border: 2px solid;
+  padding: 0.6em 1em !important;
+  border-radius: 3px;
+  transition: all 0.2s; }
+  .button a:after {
+    font-family: "ETmodules" !important;
+    font-weight: normal;
+    font-style: normal;
+    font-variant: normal;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    line-height: 1;
+    text-transform: none;
+    speak: none;
+    position: absolute;
+    top: 2px;
+    margin-left: -1em;
+    opacity: 0;
+    font-size: 32px;
+    line-height: 1em;
+    content: "\35";
+    transition: all 0.2s; }
+  .button a:hover {
+    padding: 0.6em 2em 0.6em 1em !important; }
+    .button a:hover:after {
+      margin-left: 0;
+      opacity: 1; }
+
 .et_pb_custom_button_icon {
   border: none !important;
   padding-left: 0 !important;
@@ -12407,8 +12452,12 @@ body.et-pb-preview #main-content .container ol {
     color: #DB1928 !important; }
 
 /* Page Header */
-#top-menu li li a {
-  width: 235px; }
+#top-menu li {
+  font-family: "ff-ernestine-web-pro"; }
+  #top-menu li a:hover {
+    color: #DB1928; }
+  #top-menu li li a {
+    width: 235px; }
 
 .nav li ul {
   width: auto; }
@@ -12556,11 +12605,37 @@ body.et-pb-preview #main-content .container ol {
 .SVGHOLDER svg {
   height: 100px; }
 
+.home .SVGHOLDER svg {
+  height: 35px; }
+
 #how-to-steps .et_pb_blurb {
   text-align: center; }
   #how-to-steps .et_pb_blurb h4 {
     font-size: 26px;
     text-transform: none; }
+
+#how-to-steps .SVGHOLDER {
+  height: 107px;
+  width: 107px; }
+
+#steps {
+  padding: 54px 0 0; }
+  #steps .et_pb_blurb_position_left .et-pb-icon-circle {
+    border-radius: 50%; }
+  #steps .et_pb_main_blurb_image a .SVGHOLDER {
+    border-radius: 50%; }
+  #steps .et_pb_blurb h4 {
+    font-size: 30px;
+    text-transform: none; }
+    #steps .et_pb_blurb h4 a {
+      color: #666; }
+  #steps .SVGHOLDER svg {
+    height: 39px;
+    height: 39px;
+    padding: 8px; }
+  #steps a:hover span.SVGHOLDER {
+    background-color: #DB1928 !important;
+    transition: all 0.2s ease-in-out; }
 
 /* PLAN DESCRIPTION */
 .csa-plan-description {
@@ -12677,6 +12752,22 @@ body.et-pb-preview #main-content .container ol {
     display: block;
     width: 100%;
     text-align: center !important; }
+
+/* callout-photo */
+.callout-w-image img {
+  border-radius: 50%; }
+  .callout-w-image img:after {
+    display: block;
+    text-align: center;
+    font-style: italic;
+    margin-top: 1em; }
+
+.callout-w-image .et_pb_blurb h4 {
+  text-transform: none;
+  font-size: 30px; }
+
+.callout-w-image .et_pb_blurb_content {
+  max-width: none; }
 
 /* EVENTS */
 .spoke-events-slider .et_pb_slide_with_no_image {
