--- a/scss/edit-additional.scss
+++ b/scss/edit-additional.scss
@@ -35,6 +35,30 @@ h1, h2, h3, h4, h5, h6 {font-family:$ernest !important;}
 }
 .widgettitle {color:$red;text-transform:uppercase;font-size:20px;}
 
+input[type=text], input[type=password], input[type=tel], input[type=email], input.text, input.title, textarea, select {
+	border-radius:3px;padding:5px 10px;
+}
+input[type="submit"] {background:$red;color:#fff;-webkit-appearance:none;border:none;font-size:14px;
+	border-radius:3px;border:none;padding:4px 8px 6px;margin-left:3px;
+}
+for.mailing-list {margin-top:20px;}
+.input-hold {
+	position:relative;width:40%;display:inline-block;margin-right:2%;
+	
+	input {width:100%;font-size:16px;}
+	input[type="submit"] {width:10%;}
+	
+	label {
+		position:absolute;left:8px;top:-1.8em;transition:all 0.3s ease-in-out;opacity:1;color:#fff;
+	}
+	
+	&.js-hide-label {
+		label {
+			opacity:0;top:1.5em;
+		}
+	}
+}
+
 /* GENERAL */
 .red {background:$red !important;}
 .orange {background:$orange !important;}
@@ -585,7 +609,13 @@ h1.entry-title, h2.entry-title {font-size:37px;color:$red;}
 	#footer-widgets {padding:0;}
 	#footer-bottom {background-color:transparent !important;}
 	.footer-widget {
-		width:100%;margin-bottom:0;
+		margin-bottom:0;
+		
+		&:nth-child(1) {width:25%}
+		&:nth-child(2) {width:50%;}
+		&:nth-child(3) {width:10%;}
+		
+		.fwidget, .textwidget {width:100%;}
 		h4 {font-size:20px;color:#fff !important;}
 	}
 }
